@@ -1,11 +1,11 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/query-by-committee.r
-\name{query_by_committee}
-\alias{query_by_committee}
+% Please edit documentation in R/query-committee.r
+\name{query_committee}
+\alias{query_committee}
 \title{Active learning with "Query by Committee"}
 \usage{
-query_by_committee(x, y, committee, disagreement = c("kullback",
-  "vote_entropy", "post_entropy"), num_query = 1, num_cores = 1, ...)
+query_committee(x, y, committee, disagreement = c("kullback", "vote_entropy",
+  "post_entropy"), num_query = 1, num_cores = 1, ...)
 }
 \arguments{
 \item{x}{a matrix containing the labeled and unlabeled data}
@@ -81,8 +81,8 @@ y <- iris[, 5]
 y <- replace(y, -c(1:12, 51:62, 101:112), NA)
 
 committee <- c("lda", "qda", "rda")
-query_by_committee(x = x, y = y, committee = committee, num_query = 3)$query
-query_by_committee(x = x, y = y, committee = committee,
-                   disagreement = "post_entropy", num_query = 5)$query
+query_committee(x=x, y=y, committee=committee, num_query=3)$query
+query_committee(x=x, y=y, committee=committee, disagreement="post_entropy",
+                num_query=5)$query
 }
 
